refactor: code cleanup